Various cleanups, particularly to new G Challenges.